<resources>
    <string name="app_name">GitMore</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="location">Location </string>
    <string name="repository">Repository</string>
    <string name="company">Company </string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="replace">##</string>
    <string name="detail_user">Detail User</string>
    <string name="title_menu_favorite">Favorite</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="title_activity_settings">Settings</string>
    <string name="daily_message">Look Your New Friend on Github</string>
    <string name="title_splash">Git-More</string>
    <string name="copyright">Created by Dean Amilush</string>
    <string name="search">Find People Nearby on Github</string>
    <string name="activated_reminder">Daily Reminder Activated</string>
    <string name="reminder_canceled">Daily Reminder Canceled</string>
    <string name="delete_favorite">Data Deleted from Favorite</string>
    <string name="add_favorite">Data Added to Favorite</string>
</resources>