<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".global.DetailUserActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="20dp"
        android:backgroundTint="@color/teal_700"
        android:src="@drawable/ic_baseline_unfavorite_24"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:background="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_avatar"
        android:layout_width="110dp"
        android:layout_height="85dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:src="@android:color/darker_gray"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_avatar" />

    <TextView
        android:id="@+id/detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_username" />
    <ImageView
        android:id="@+id/img_company"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/company"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_name" />

    <ImageView
        android:id="@+id/img_location"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_company" />

    <TextView
        android:id="@+id/detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/location"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/img_location"
        app:layout_constraintTop_toBottomOf="@+id/detail_company" />
    <TextView
        android:id="@+id/txt_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:text="@string/followers"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/detail_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="24dp"
        android:text="@string/following"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/txt_followers"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="24dp"
        android:text="@string/repository"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/txt_following"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/user_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="12dp"
        android:text="@string/replace"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/detail_avatar"
        app:layout_constraintTop_toBottomOf="@+id/txt_followers" />

    <TextView
        android:id="@+id/user_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/replace"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/txt_followers"
        app:layout_constraintTop_toBottomOf="@+id/txt_following" />

    <TextView
        android:id="@+id/detail_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="12dp"
        android:text="@string/replace"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/txt_following"
        app:layout_constraintTop_toBottomOf="@+id/txt_repository" />

    <TextView
        android:id="@+id/detail_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/company"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/img_company"
        app:layout_constraintTop_toBottomOf="@+id/detail_name" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/rv"
        app:layout_constraintTop_toBottomOf="@+id/view"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

</androidx.constraintlayout.widget.ConstraintLayout>